[gd_scene load_steps=9 format=3 uid="uid://bc0eq1smevkrg"]

[ext_resource type="Script" path="res://obiekty/postacie/BoskiSędzia/InterfejsGracza.gd" id="1_c2byk"]
[ext_resource type="Texture2D" uid="uid://brpjkbyambgjj" path="res://rysunki/UI/interfejsGracza/ui-podNim.png" id="2_hsp50"]
[ext_resource type="Script" path="res://obiekty/postacie/BoskiSędzia/wyświetlaczInnychBroni.gd" id="3_qi1ag"]
[ext_resource type="Texture2D" uid="uid://0olkn802c3m" path="res://rysunki/UI/interfejsGracza/ui-wygląd.png" id="4_c50jf"]
[ext_resource type="Texture2D" uid="uid://cog17ei6s2sg6" path="res://rysunki/UI/interfejsGracza/Commando.png" id="4_wm7q7"]
[ext_resource type="Texture2D" uid="uid://boija85hjrbme" path="res://rysunki/UI/interfejsGracza/Bagnet.png" id="5_trvpa"]
[ext_resource type="Texture2D" uid="uid://bo1r4da8eryix" path="res://rysunki/UI/interfejsGracza/787-short.png" id="7_3qkxu"]
[ext_resource type="FontFile" uid="uid://b01nhi7csnkl8" path="res://Judical.ttf" id="8_be3oi"]

[node name="WyświetlaczOPostaci" type="CanvasLayer"]
script = ExtResource("1_c2byk")

[node name="wyświetlaczInnychBroni" type="TextureRect" parent="."]
light_mask = 16
visibility_layer = 512
offset_left = 477.0
offset_top = 540.0
offset_right = 677.0
offset_bottom = 652.0
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_default_cursor_shape = 5
texture = ExtResource("2_hsp50")
script = ExtResource("3_qi1ag")

[node name="broń1" type="TextureButton" parent="wyświetlaczInnychBroni"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_wm7q7")
stretch_mode = 3

[node name="broń2" type="TextureButton" parent="wyświetlaczInnychBroni"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
texture_normal = ExtResource("5_trvpa")
stretch_mode = 3

[node name="głównyWyświetlacz" type="TextureRect" parent="."]
light_mask = 3
visibility_layer = 3
anchors_preset = -1
anchor_top = 0.83358
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.160034
texture = ExtResource("4_c50jf")
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="PrzyciskGraj" type="TextureButton" parent="głównyWyświetlacz"]
layout_mode = 0
offset_top = 54.0
offset_right = 96.0
offset_bottom = 108.0

[node name="PrzyciskStój" type="TextureButton" parent="głównyWyświetlacz"]
layout_mode = 0
offset_left = 96.0
offset_top = 54.0
offset_right = 192.0
offset_bottom = 108.0

[node name="PrzyciskCofnij" type="TextureButton" parent="głównyWyświetlacz"]
layout_mode = 0
offset_left = 192.0
offset_top = 54.0
offset_right = 288.0
offset_bottom = 108.0

[node name="PrzyciskPrzedmiot1" type="TextureButton" parent="głównyWyświetlacz"]
layout_mode = 0
offset_left = 768.0
offset_top = 54.0
offset_right = 896.0
offset_bottom = 108.0

[node name="PrzyciskPrzedmiot2" type="TextureButton" parent="głównyWyświetlacz"]
layout_mode = 0
offset_left = 896.0
offset_top = 54.0
offset_right = 1024.0
offset_bottom = 108.0

[node name="PrzyciskPrzedmiot3" type="TextureButton" parent="głównyWyświetlacz"]
layout_mode = 0
offset_left = 1024.0
offset_top = 54.0
offset_right = 1152.0
offset_bottom = 108.0

[node name="używanaBroń" type="TextureButton" parent="głównyWyświetlacz"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333
anchor_top = 0.333
anchor_right = 0.667
anchor_bottom = 1.0
offset_left = 0.384003
offset_top = -35.964
offset_right = -0.383972
stretch_mode = 0

[node name="UżywanaBroń" type="Sprite2D" parent="głównyWyświetlacz"]
position = Vector2(531, 40.0002)
scale = Vector2(2, 2)
texture = ExtResource("7_3qkxu")

[node name="NazwaBroni" type="Label" parent="głównyWyświetlacz"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -67.0
offset_top = -38.0
offset_right = 69.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("8_be3oi")
text = "787 Short"
horizontal_alignment = 1

[node name="Amunicja" type="Label" parent="głównyWyświetlacz"]
layout_mode = 0
offset_left = 667.0
offset_top = 18.0002
offset_right = 747.0
offset_bottom = 51.0002
theme_override_fonts/font = ExtResource("8_be3oi")
text = "6 / 24"

[connection signal="mouse_entered" from="wyświetlaczInnychBroni/broń1" to="wyświetlaczInnychBroni" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="wyświetlaczInnychBroni/broń1" to="wyświetlaczInnychBroni" method="_on_mouse_exited"]
[connection signal="pressed" from="wyświetlaczInnychBroni/broń1" to="." method="_on_broń1_pressed"]
[connection signal="mouse_entered" from="wyświetlaczInnychBroni/broń2" to="wyświetlaczInnychBroni" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="wyświetlaczInnychBroni/broń2" to="wyświetlaczInnychBroni" method="_on_mouse_exited"]
[connection signal="pressed" from="wyświetlaczInnychBroni/broń2" to="." method="_on_broń2_pressed"]
[connection signal="mouse_entered" from="głównyWyświetlacz/używanaBroń" to="." method="_on_używana_broń_mouse_entered"]
[connection signal="mouse_exited" from="głównyWyświetlacz/używanaBroń" to="." method="_on_używana_broń_mouse_exited"]
